--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="#">Sign In</a></li>
       </ul>
     </nav>
+
     <header>
       <div>
         <img
@@ -52,7 +53,7 @@
           family, and co-workers.
         </p>
 
-        <button>Get Started</button>
+        <button id="started">Get Started</button>
       </div>
     </header>
     <main>
@@ -169,7 +170,7 @@
         </p>
 
         <form>
-          <input type="email" name="email">
+          <input type="email" name="email" placeholder="email@example.com">
           <button type="submit">Get Started For Free</button>
         </form>
       </section>
