--- a/index.html
+++ b/index.html
@@ -57,71 +57,74 @@
       </div>
     </header>
     <main>
-      <section>
-        <img
-          src="./assets/img/icon-access-anywhere.svg"
-          alt="Computer and mobile device" class="icon"
-        />
-        <h2>Access your files, anywhere</h2>
-        <p>
-          The ability to use a smartphone, tablet, or computer to access your
-          account means your files follow you everywhere.
-        </p>
-      </section>
-
-      <section>
-        <img src="./assets/img/icon-security.svg" alt="Security" class="icon"/>
-        <h2>Security you can trust</h2>
-        <p>
-          2-factor authentication and user-controlled encryption are just a
-          couple of the security features we allow to help secure your files.
-        </p>
-      </section>
-
-      <section>
-        <img src="./assets/img/icon-collaboration.svg" alt="Clock and people" class="icon"/>
-        <h2>Real-time collaboration</h2>
-        <p>
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required.
-        </p>
-      </section>
-
-      <section>
-        <img src="./assets/img/icon-any-file.svg" alt="Folder and files" class="icon" />
-        <h2>Store any type of file</h2>
-        <p>
-          Whether you're sharing holidays photos or work documents, Fylo has you
-          covered allowing for all file types to be securely stored and shared.
-        </p>
-      </section>
-
-      <section>
-        <div>
+      <div id="servicesDiv">
+        <section class="services">
           <img
-            src="./assets/img/illustration-stay-productive.png"
-            alt="Maps and working People" class="icon"
+            src="./assets/img/icon-access-anywhere.svg"
+            alt="Computer and mobile device" class="icon"
           />
-        <div>
-          <h2>Stay productive, wherever you are</h2>
+          <h2>Access your files, anywhere</h2>
           <p>
-            Never let location be an issue when accessing your files. Fylo has you
-            covered for all of your file storage needs.
+            The ability to use a smartphone, tablet, or computer to access your
+            account means your files follow you everywhere.
           </p>
+        </section>
 
+        <section class="services">
+          <img src="./assets/img/icon-security.svg" alt="Security" class="icon"/>
+          <h2>Security you can trust</h2>
+          <p>
+            2-factor authentication and user-controlled encryption are just a
+            couple of the security features we allow to help secure your files.
+          </p>
+        </section>
+
+        <section class="services">
+          <img src="./assets/img/icon-collaboration.svg" alt="Clock and people" class="icon"/>
+          <h2>Real-time collaboration</h2>
           <p>
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
+        </section class="services">
 
-          <a href="#"
-            >See how Fylo works
-            <img src="./assets/img/icon-arrow.svg" alt="Arrow" 
-          /></a>
-        </div>
+        <section class="services">
+          <img src="./assets/img/icon-any-file.svg" alt="Folder and files" class="icon" />
+          <h2>Store any type of file</h2>
+          <p>
+            Whether you're sharing holidays photos or work documents, Fylo has you
+            covered allowing for all file types to be securely stored and shared.
+          </p>
+        </section>
+      </div>
+
+      <section id="stayProductive">
+          <div>
+            <img
+              src="./assets/img/illustration-stay-productive.png"
+              alt="Maps and working People" class="icon"
+            />
+          </div>
+          <div>
+            <h2>Stay productive, wherever you are</h2>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has you
+              covered for all of your file storage needs.
+            </p>
+
+            <p>
+              Securely share files and folders with friends, family and colleagues
+              for live collaboration. No email attachments required.
+            </p>
+
+            <a href="#"
+              >See how Fylo works
+              <img src="./assets/img/icon-arrow.svg" alt="Arrow" 
+            /></a>
+          </div>
       </section>
 
-      <section>
+      <section id="reviewDiv">
         <div class="review">
           <p>
             Fylo has improved our team productivity by an order of magnitude. Since
